[tool.poetry]
name = "cipher_jq2334"
version = "0.1.0"
description = "Adding cipher function"
authors = ["Jade Qiu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
